test/error/nonstringconcat2.luau
print(table.concat { "hello", "world", buffer.create(2) })
